--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 MONGO_URI="mongodb+srv://sanchitbajaj2003:root12345@asara-cluster.a20qhxz.mongodb.net/?retryWrites=true&w=majority&appName=ASARA-CLUSTER"
+# MONGO_URI="mongodb://localhost:27017"
 
