--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "5.0.1",
     "react-speech-recognition": "^3.10.0",
     "react-tooltip": "^5.27.1",
+    "speech-synthesis": "^0.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
