--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.20.0",
     "mongoose": "^8.6.1",
+    "twilio": "^5.3.0",
     "validator": "^13.12.0"
   }
 }
