--- a/backend/.env
+++ b/backend/.env
@@ -3,4 +3,8 @@ MONGO_URI="mongodb+srv://sanchitbajaj2003:root12345@asara-cluster.a20qhxz.mongod
 TWILIO_ACCOUNT_SID=AC49cf79ca2bad9ef4828ed8c2b228c3db
 TWILIO_AUTH_TOKEN=46111b997e3a2824959dae429ccf8f3e
 
+// const accountSid = 'AC49cf79ca2bad9ef4828ed8c2b228c3db';
+// const authToken = '46111b997e3a2824959dae429ccf8f3e';
+// const client = require('twilio')(accountSid, authToken);
+
 
