--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "mongoose": "^8.4.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
     "react-speech-recognition": "^3.10.0",
